# amoba

./: .gcovr.cfg  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ProjectOptions.cmake  README.md
.github/: constants.env
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml
amoba/: CMakeLists.txt  amoba.cpp  amoba.hpp  client.hpp  config.hpp.in  net.hpp  server.cpp  server.hpp
amoba-web/: index.html  script.js
cmake/: Cache.cmake  CompilerWarnings.cmake  InterproceduralOptimization.cmake  Linker.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  VCEnvironment.cmake
libamoba/: CMakeLists.txt  inf_am.cpp  inf_am.hpp  inf_am_offsets.cpp  util.cpp  util.hpp
libamoba/amoba/: amoba.h
libamoba/amoba/amobas/: inf_am.h
script/: gen_inf_offsets.py
test/: CMakeLists.txt  tests.cpp
